--- a/roles/backend/tasks/install_wp.yml
+++ b/roles/backend/tasks/install_wp.yml
@@ -69,7 +69,7 @@
 
 - name: Install WP tables
   command: wp core install
-    --url=34.245.103.122
+    --url="{{ frontend }}"
     --title="{{ wp_site_title }}"
     --admin_user="{{ wp_admin_user }}"
     --admin_password="{{ wp_admin_pass }}"
