--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -21,7 +21,10 @@
   become: yes
 
 - name: Copy cfg
-  copy: src=default.conf.j2 dest=/etc/nginx/conf.d/default.conf mode=0664
+  template:
+    src: default.conf.j2 
+    dest: /etc/nginx/conf.d/default.conf 
+    mode: 0664
   notify: restart nginx
   become: yes
 
